tools/flowc/tests/errors/pipe_binding_concat.flow
// Test case for pipe binding with string concatenation
import runtime;

// Function that returns a string to ensure type consistency
transform(s : string) -> string {
	s + "!";
}

main() {
	// The pipe operator binds to the right operand of + only
	// User probably intended: ("hello " + "world") |> transform |> println
	"hello " + "world" |> transform |> println;
	
	// The issue is more obvious when using multiple concatenations
	// This will be parsed as: "a" + ("b" + ("c" |> transform))
	"a" + "b" + "c" |> transform |> println;
	
	// This is the correct way to write it
	("hello " + "world") |> transform |> println;
}